# ivf_flat_repository

./: CMakeLists.txt
build_logs/ivf_flat/: log_L10.txt  log_L15.txt  log_L20.txt  log_L25.txt  log_L30.txt  log_L35.txt  log_L40.txt  log_L45.txt  log_L50.txt
build_logs/ivf_pq/: log_L10.txt  log_L15.txt  log_L20.txt  log_L25.txt  log_L30.txt  log_L35.txt  log_L40.txt  log_L45.txt  log_L50.txt
build_logs/vamana/: log_L128.txt  log_L192.txt  log_L256.txt  log_L320.txt  log_L400.txt  log_L64.txt
flat/: CMakeLists.txt  ivf_flat.cpp  ivf_flat.h  testing.cpp  testing2.cpp
pq/: CMakeLists.txt  ivf_pq.cpp  ivf_pq.h
testing/: CMakeLists.txt  test_ivf_flat.cpp  test_ivf_pq.cpp
